Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CORCHETE_DER
    CORCHETE_IZQ

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA ID PUNTO_COMA vars funcs INICIO cuerpo FIN
Rule 2     vars -> VARS lista_vars
Rule 3     vars -> empty
Rule 4     lista_vars -> ID mas_ids DOS_PUNTOS tipo PUNTO_COMA
Rule 5     lista_vars -> lista_vars ID mas_ids DOS_PUNTOS tipo PUNTO_COMA
Rule 6     mas_ids -> COMA ID mas_ids
Rule 7     mas_ids -> empty
Rule 8     tipo -> ENTERO
Rule 9     tipo -> FLOTANTE
Rule 10    params_decl -> ID DOS_PUNTOS tipo
Rule 11    params_decl -> params_decl COMA ID DOS_PUNTOS tipo
Rule 12    params_decl -> empty
Rule 13    func_nombre -> ID
Rule 14    func_header -> ENTERO func_nombre PAREN_IZQ params_decl PAREN_DER
Rule 15    func_header -> FLOTANTE func_nombre PAREN_IZQ params_decl PAREN_DER
Rule 16    func_header -> NULA func_nombre PAREN_IZQ params_decl PAREN_DER
Rule 17    funcs -> funcs func_header LLAVE_IZQ vars cuerpo LLAVE_DER PUNTO_COMA
Rule 18    funcs -> empty
Rule 19    cuerpo -> LLAVE_IZQ lista_estatutos LLAVE_DER
Rule 20    cuerpo -> LLAVE_IZQ LLAVE_DER
Rule 21    lista_estatutos -> estatuto
Rule 22    lista_estatutos -> lista_estatutos estatuto
Rule 23    estatuto -> asigna
Rule 24    estatuto -> condicion
Rule 25    estatuto -> ciclo
Rule 26    estatuto -> imprime
Rule 27    estatuto -> llamada PUNTO_COMA
Rule 28    estatuto -> retorna
Rule 29    retorna -> REGRESA expresion PUNTO_COMA
Rule 30    asigna -> ID ASIGNA expresion PUNTO_COMA
Rule 31    imprime -> ESCRIBE PAREN_IZQ imp_lista PAREN_DER PUNTO_COMA
Rule 32    imp_lista -> expresion
Rule 33    imp_lista -> CADENA
Rule 34    imp_lista -> imp_lista COMA expresion
Rule 35    imp_lista -> imp_lista COMA CADENA
Rule 36    si_header -> SI PAREN_IZQ expresion PAREN_DER
Rule 37    condicion -> si_header cuerpo PUNTO_COMA
Rule 38    condicion -> si_header cuerpo sino_header cuerpo PUNTO_COMA
Rule 39    sino_header -> SINO
Rule 40    mientras_header -> MIENTRAS
Rule 41    mientras_cond -> mientras_header PAREN_IZQ expresion PAREN_DER
Rule 42    ciclo -> mientras_cond HAZ cuerpo PUNTO_COMA
Rule 43    llamada -> ID PAREN_IZQ args PAREN_DER
Rule 44    args -> expresion
Rule 45    args -> args COMA expresion
Rule 46    args -> empty
Rule 47    expresion -> exp
Rule 48    expresion -> exp mayor_op exp
Rule 49    expresion -> exp menor_op exp
Rule 50    expresion -> exp igual_op exp
Rule 51    expresion -> exp diferente_op exp
Rule 52    exp -> termino
Rule 53    exp -> exp suma_op termino
Rule 54    exp -> exp resta_op termino
Rule 55    termino -> factor
Rule 56    termino -> termino mult_op factor
Rule 57    termino -> termino div_op factor
Rule 58    suma_op -> SUMA
Rule 59    resta_op -> RESTA
Rule 60    mult_op -> MULT
Rule 61    div_op -> DIV
Rule 62    mayor_op -> MAYOR
Rule 63    menor_op -> MENOR
Rule 64    igual_op -> IGUAL
Rule 65    diferente_op -> DIFERENTE
Rule 66    factor -> PAREN_IZQ expresion PAREN_DER
Rule 67    factor -> SUMA cte
Rule 68    factor -> RESTA cte
Rule 69    factor -> cte
Rule 70    factor -> ID
Rule 71    cte -> CTE_ENT
Rule 72    cte -> CTE_FLOT
Rule 73    empty -> <empty>

Terminals, with rules where they appear

ASIGNA               : 30
CADENA               : 33 35
COMA                 : 6 11 34 35 45
CORCHETE_DER         : 
CORCHETE_IZQ         : 
CTE_ENT              : 71
CTE_FLOT             : 72
DIFERENTE            : 65
DIV                  : 61
DOS_PUNTOS           : 4 5 10 11
ENTERO               : 8 14
ESCRIBE              : 31
FIN                  : 1
FLOTANTE             : 9 15
HAZ                  : 42
ID                   : 1 4 5 6 10 11 13 30 43 70
IGUAL                : 64
INICIO               : 1
LLAVE_DER            : 17 19 20
LLAVE_IZQ            : 17 19 20
MAYOR                : 62
MENOR                : 63
MIENTRAS             : 40
MULT                 : 60
NULA                 : 16
PAREN_DER            : 14 15 16 31 36 41 43 66
PAREN_IZQ            : 14 15 16 31 36 41 43 66
PROGRAMA             : 1
PUNTO_COMA           : 1 4 5 17 27 29 30 31 37 38 42
REGRESA              : 29
RESTA                : 59 68
SI                   : 36
SINO                 : 39
SUMA                 : 58 67
VARS                 : 2
error                : 

Nonterminals, with rules where they appear

args                 : 43 45
asigna               : 23
ciclo                : 25
condicion            : 24
cte                  : 67 68 69
cuerpo               : 1 17 37 38 38 42
diferente_op         : 51
div_op               : 57
empty                : 3 7 12 18 46
estatuto             : 21 22
exp                  : 47 48 48 49 49 50 50 51 51 53 54
expresion            : 29 30 32 34 36 41 44 45 66
factor               : 55 56 57
func_header          : 17
func_nombre          : 14 15 16
funcs                : 1 17
igual_op             : 50
imp_lista            : 31 34 35
imprime              : 26
lista_estatutos      : 19 22
lista_vars           : 2 5
llamada              : 27
mas_ids              : 4 5 6
mayor_op             : 48
menor_op             : 49
mientras_cond        : 42
mientras_header      : 41
mult_op              : 56
params_decl          : 11 14 15 16
programa             : 0
resta_op             : 54
retorna              : 28
si_header            : 37 38
sino_header          : 38
suma_op              : 53
termino              : 52 53 54 56 57
tipo                 : 4 5 10 11
vars                 : 1 17

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA ID PUNTO_COMA vars funcs INICIO cuerpo FIN

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . ID PUNTO_COMA vars funcs INICIO cuerpo FIN

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAMA ID . PUNTO_COMA vars funcs INICIO cuerpo FIN

    PUNTO_COMA      shift and go to state 4


state 4

    (1) programa -> PROGRAMA ID PUNTO_COMA . vars funcs INICIO cuerpo FIN
    (2) vars -> . VARS lista_vars
    (3) vars -> . empty
    (73) empty -> .

    VARS            shift and go to state 6
    INICIO          reduce using rule 73 (empty -> .)
    ENTERO          reduce using rule 73 (empty -> .)
    FLOTANTE        reduce using rule 73 (empty -> .)
    NULA            reduce using rule 73 (empty -> .)

    vars                           shift and go to state 5
    empty                          shift and go to state 7

state 5

    (1) programa -> PROGRAMA ID PUNTO_COMA vars . funcs INICIO cuerpo FIN
    (17) funcs -> . funcs func_header LLAVE_IZQ vars cuerpo LLAVE_DER PUNTO_COMA
    (18) funcs -> . empty
    (73) empty -> .

    INICIO          reduce using rule 73 (empty -> .)
    ENTERO          reduce using rule 73 (empty -> .)
    FLOTANTE        reduce using rule 73 (empty -> .)
    NULA            reduce using rule 73 (empty -> .)

    funcs                          shift and go to state 8
    empty                          shift and go to state 9

state 6

    (2) vars -> VARS . lista_vars
    (4) lista_vars -> . ID mas_ids DOS_PUNTOS tipo PUNTO_COMA
    (5) lista_vars -> . lista_vars ID mas_ids DOS_PUNTOS tipo PUNTO_COMA

    ID              shift and go to state 11

    lista_vars                     shift and go to state 10

state 7

    (3) vars -> empty .

    INICIO          reduce using rule 3 (vars -> empty .)
    ENTERO          reduce using rule 3 (vars -> empty .)
    FLOTANTE        reduce using rule 3 (vars -> empty .)
    NULA            reduce using rule 3 (vars -> empty .)
    LLAVE_IZQ       reduce using rule 3 (vars -> empty .)


state 8

    (1) programa -> PROGRAMA ID PUNTO_COMA vars funcs . INICIO cuerpo FIN
    (17) funcs -> funcs . func_header LLAVE_IZQ vars cuerpo LLAVE_DER PUNTO_COMA
    (14) func_header -> . ENTERO func_nombre PAREN_IZQ params_decl PAREN_DER
    (15) func_header -> . FLOTANTE func_nombre PAREN_IZQ params_decl PAREN_DER
    (16) func_header -> . NULA func_nombre PAREN_IZQ params_decl PAREN_DER

    INICIO          shift and go to state 12
    ENTERO          shift and go to state 14
    FLOTANTE        shift and go to state 15
    NULA            shift and go to state 16

    func_header                    shift and go to state 13

state 9

    (18) funcs -> empty .

    INICIO          reduce using rule 18 (funcs -> empty .)
    ENTERO          reduce using rule 18 (funcs -> empty .)
    FLOTANTE        reduce using rule 18 (funcs -> empty .)
    NULA            reduce using rule 18 (funcs -> empty .)


state 10

    (2) vars -> VARS lista_vars .
    (5) lista_vars -> lista_vars . ID mas_ids DOS_PUNTOS tipo PUNTO_COMA

    INICIO          reduce using rule 2 (vars -> VARS lista_vars .)
    ENTERO          reduce using rule 2 (vars -> VARS lista_vars .)
    FLOTANTE        reduce using rule 2 (vars -> VARS lista_vars .)
    NULA            reduce using rule 2 (vars -> VARS lista_vars .)
    LLAVE_IZQ       reduce using rule 2 (vars -> VARS lista_vars .)
    ID              shift and go to state 17


state 11

    (4) lista_vars -> ID . mas_ids DOS_PUNTOS tipo PUNTO_COMA
    (6) mas_ids -> . COMA ID mas_ids
    (7) mas_ids -> . empty
    (73) empty -> .

    COMA            shift and go to state 19
    DOS_PUNTOS      reduce using rule 73 (empty -> .)

    mas_ids                        shift and go to state 18
    empty                          shift and go to state 20

state 12

    (1) programa -> PROGRAMA ID PUNTO_COMA vars funcs INICIO . cuerpo FIN
    (19) cuerpo -> . LLAVE_IZQ lista_estatutos LLAVE_DER
    (20) cuerpo -> . LLAVE_IZQ LLAVE_DER

    LLAVE_IZQ       shift and go to state 22

    cuerpo                         shift and go to state 21

state 13

    (17) funcs -> funcs func_header . LLAVE_IZQ vars cuerpo LLAVE_DER PUNTO_COMA

    LLAVE_IZQ       shift and go to state 23


state 14

    (14) func_header -> ENTERO . func_nombre PAREN_IZQ params_decl PAREN_DER
    (13) func_nombre -> . ID

    ID              shift and go to state 25

    func_nombre                    shift and go to state 24

state 15

    (15) func_header -> FLOTANTE . func_nombre PAREN_IZQ params_decl PAREN_DER
    (13) func_nombre -> . ID

    ID              shift and go to state 25

    func_nombre                    shift and go to state 26

state 16

    (16) func_header -> NULA . func_nombre PAREN_IZQ params_decl PAREN_DER
    (13) func_nombre -> . ID

    ID              shift and go to state 25

    func_nombre                    shift and go to state 27

state 17

    (5) lista_vars -> lista_vars ID . mas_ids DOS_PUNTOS tipo PUNTO_COMA
    (6) mas_ids -> . COMA ID mas_ids
    (7) mas_ids -> . empty
    (73) empty -> .

    COMA            shift and go to state 19
    DOS_PUNTOS      reduce using rule 73 (empty -> .)

    mas_ids                        shift and go to state 28
    empty                          shift and go to state 20

state 18

    (4) lista_vars -> ID mas_ids . DOS_PUNTOS tipo PUNTO_COMA

    DOS_PUNTOS      shift and go to state 29


state 19

    (6) mas_ids -> COMA . ID mas_ids

    ID              shift and go to state 30


state 20

    (7) mas_ids -> empty .

    DOS_PUNTOS      reduce using rule 7 (mas_ids -> empty .)


state 21

    (1) programa -> PROGRAMA ID PUNTO_COMA vars funcs INICIO cuerpo . FIN

    FIN             shift and go to state 31


state 22

    (19) cuerpo -> LLAVE_IZQ . lista_estatutos LLAVE_DER
    (20) cuerpo -> LLAVE_IZQ . LLAVE_DER
    (21) lista_estatutos -> . estatuto
    (22) lista_estatutos -> . lista_estatutos estatuto
    (23) estatuto -> . asigna
    (24) estatuto -> . condicion
    (25) estatuto -> . ciclo
    (26) estatuto -> . imprime
    (27) estatuto -> . llamada PUNTO_COMA
    (28) estatuto -> . retorna
    (30) asigna -> . ID ASIGNA expresion PUNTO_COMA
    (37) condicion -> . si_header cuerpo PUNTO_COMA
    (38) condicion -> . si_header cuerpo sino_header cuerpo PUNTO_COMA
    (42) ciclo -> . mientras_cond HAZ cuerpo PUNTO_COMA
    (31) imprime -> . ESCRIBE PAREN_IZQ imp_lista PAREN_DER PUNTO_COMA
    (43) llamada -> . ID PAREN_IZQ args PAREN_DER
    (29) retorna -> . REGRESA expresion PUNTO_COMA
    (36) si_header -> . SI PAREN_IZQ expresion PAREN_DER
    (41) mientras_cond -> . mientras_header PAREN_IZQ expresion PAREN_DER
    (40) mientras_header -> . MIENTRAS

    LLAVE_DER       shift and go to state 33
    ID              shift and go to state 41
    ESCRIBE         shift and go to state 44
    REGRESA         shift and go to state 45
    SI              shift and go to state 46
    MIENTRAS        shift and go to state 48

    lista_estatutos                shift and go to state 32
    estatuto                       shift and go to state 34
    asigna                         shift and go to state 35
    condicion                      shift and go to state 36
    ciclo                          shift and go to state 37
    imprime                        shift and go to state 38
    llamada                        shift and go to state 39
    retorna                        shift and go to state 40
    si_header                      shift and go to state 42
    mientras_cond                  shift and go to state 43
    mientras_header                shift and go to state 47

state 23

    (17) funcs -> funcs func_header LLAVE_IZQ . vars cuerpo LLAVE_DER PUNTO_COMA
    (2) vars -> . VARS lista_vars
    (3) vars -> . empty
    (73) empty -> .

    VARS            shift and go to state 6
    LLAVE_IZQ       reduce using rule 73 (empty -> .)

    vars                           shift and go to state 49
    empty                          shift and go to state 7

state 24

    (14) func_header -> ENTERO func_nombre . PAREN_IZQ params_decl PAREN_DER

    PAREN_IZQ       shift and go to state 50


state 25

    (13) func_nombre -> ID .

    PAREN_IZQ       reduce using rule 13 (func_nombre -> ID .)


state 26

    (15) func_header -> FLOTANTE func_nombre . PAREN_IZQ params_decl PAREN_DER

    PAREN_IZQ       shift and go to state 51


state 27

    (16) func_header -> NULA func_nombre . PAREN_IZQ params_decl PAREN_DER

    PAREN_IZQ       shift and go to state 52


state 28

    (5) lista_vars -> lista_vars ID mas_ids . DOS_PUNTOS tipo PUNTO_COMA

    DOS_PUNTOS      shift and go to state 53


state 29

    (4) lista_vars -> ID mas_ids DOS_PUNTOS . tipo PUNTO_COMA
    (8) tipo -> . ENTERO
    (9) tipo -> . FLOTANTE

    ENTERO          shift and go to state 55
    FLOTANTE        shift and go to state 56

    tipo                           shift and go to state 54

state 30

    (6) mas_ids -> COMA ID . mas_ids
    (6) mas_ids -> . COMA ID mas_ids
    (7) mas_ids -> . empty
    (73) empty -> .

    COMA            shift and go to state 19
    DOS_PUNTOS      reduce using rule 73 (empty -> .)

    mas_ids                        shift and go to state 57
    empty                          shift and go to state 20

state 31

    (1) programa -> PROGRAMA ID PUNTO_COMA vars funcs INICIO cuerpo FIN .

    $end            reduce using rule 1 (programa -> PROGRAMA ID PUNTO_COMA vars funcs INICIO cuerpo FIN .)


state 32

    (19) cuerpo -> LLAVE_IZQ lista_estatutos . LLAVE_DER
    (22) lista_estatutos -> lista_estatutos . estatuto
    (23) estatuto -> . asigna
    (24) estatuto -> . condicion
    (25) estatuto -> . ciclo
    (26) estatuto -> . imprime
    (27) estatuto -> . llamada PUNTO_COMA
    (28) estatuto -> . retorna
    (30) asigna -> . ID ASIGNA expresion PUNTO_COMA
    (37) condicion -> . si_header cuerpo PUNTO_COMA
    (38) condicion -> . si_header cuerpo sino_header cuerpo PUNTO_COMA
    (42) ciclo -> . mientras_cond HAZ cuerpo PUNTO_COMA
    (31) imprime -> . ESCRIBE PAREN_IZQ imp_lista PAREN_DER PUNTO_COMA
    (43) llamada -> . ID PAREN_IZQ args PAREN_DER
    (29) retorna -> . REGRESA expresion PUNTO_COMA
    (36) si_header -> . SI PAREN_IZQ expresion PAREN_DER
    (41) mientras_cond -> . mientras_header PAREN_IZQ expresion PAREN_DER
    (40) mientras_header -> . MIENTRAS

    LLAVE_DER       shift and go to state 58
    ID              shift and go to state 41
    ESCRIBE         shift and go to state 44
    REGRESA         shift and go to state 45
    SI              shift and go to state 46
    MIENTRAS        shift and go to state 48

    estatuto                       shift and go to state 59
    asigna                         shift and go to state 35
    condicion                      shift and go to state 36
    ciclo                          shift and go to state 37
    imprime                        shift and go to state 38
    llamada                        shift and go to state 39
    retorna                        shift and go to state 40
    si_header                      shift and go to state 42
    mientras_cond                  shift and go to state 43
    mientras_header                shift and go to state 47

state 33

    (20) cuerpo -> LLAVE_IZQ LLAVE_DER .

    FIN             reduce using rule 20 (cuerpo -> LLAVE_IZQ LLAVE_DER .)
    PUNTO_COMA      reduce using rule 20 (cuerpo -> LLAVE_IZQ LLAVE_DER .)
    SINO            reduce using rule 20 (cuerpo -> LLAVE_IZQ LLAVE_DER .)
    LLAVE_DER       reduce using rule 20 (cuerpo -> LLAVE_IZQ LLAVE_DER .)


state 34

    (21) lista_estatutos -> estatuto .

    LLAVE_DER       reduce using rule 21 (lista_estatutos -> estatuto .)
    ID              reduce using rule 21 (lista_estatutos -> estatuto .)
    ESCRIBE         reduce using rule 21 (lista_estatutos -> estatuto .)
    REGRESA         reduce using rule 21 (lista_estatutos -> estatuto .)
    SI              reduce using rule 21 (lista_estatutos -> estatuto .)
    MIENTRAS        reduce using rule 21 (lista_estatutos -> estatuto .)


state 35

    (23) estatuto -> asigna .

    LLAVE_DER       reduce using rule 23 (estatuto -> asigna .)
    ID              reduce using rule 23 (estatuto -> asigna .)
    ESCRIBE         reduce using rule 23 (estatuto -> asigna .)
    REGRESA         reduce using rule 23 (estatuto -> asigna .)
    SI              reduce using rule 23 (estatuto -> asigna .)
    MIENTRAS        reduce using rule 23 (estatuto -> asigna .)


state 36

    (24) estatuto -> condicion .

    LLAVE_DER       reduce using rule 24 (estatuto -> condicion .)
    ID              reduce using rule 24 (estatuto -> condicion .)
    ESCRIBE         reduce using rule 24 (estatuto -> condicion .)
    REGRESA         reduce using rule 24 (estatuto -> condicion .)
    SI              reduce using rule 24 (estatuto -> condicion .)
    MIENTRAS        reduce using rule 24 (estatuto -> condicion .)


state 37

    (25) estatuto -> ciclo .
